# gi

./: .coverage  .gitignore  .pythonversion  LICENSE  README.md  RELEASES.md  RELEASE_SUMMARY.md  gi.spec  gi_standalone.py  mkdocs.yml  pyproject.toml  test.gitignore  test2.gitignore
.github/workflows/: build.yml  ci.yml  docs.yml  publish.yml
docs/: index.md
docs/about/: changelog.md  credits.md  license.md
docs/api-reference/: cli-interface.md  configuration-options.md  python-api.md
docs/developer-guide/: building.md  contributing.md  pypi-publishing.md  release-process.md  scripts.md  testing.md
docs/getting-started/: first-steps.md  installation.md  quick-start.md
docs/tutorials/: basic-usage.md  best-practices.md  ci-cd-integration.md  custom-templates.md
docs/user-guide/: advanced-usage.md  commands.md  configuration.md  templates.md
gi/: __init__.py  __main__.py  cli.py  combine.py  fetch.py  names.py  util.py
scripts/: build-local.sh  build.py  bump_version.py  install.sh  release.py
site/: 404.html  index.html  sitemap.xml
site/about/changelog/: index.html
site/about/credits/: index.html
site/about/license/: index.html
site/developer-guide/contributing/: index.html
site/getting-started/first-steps/: index.html
site/getting-started/installation/: index.html
site/getting-started/quick-start/: index.html
site/search/: search_index.json
site/tutorials/basic-usage/: index.html
site/user-guide/advanced-usage/: index.html
site/user-guide/commands/: index.html
site/user-guide/configuration/: index.html
site/user-guide/templates/: index.html
tests/: __init__.py  test_auto_detect.py  test_combine.py  test_fetch.py  test_names.py  test_util.py
tests/fixtures/: Rust.gitignore
