[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gi"
version = "0.1.1"
description = "A CLI tool to combine .gitignore templates from github/gitignore"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Joshua Grant", email = "joshua@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "requests>=2.31.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "responses>=0.23.0",
    "ruff>=0.1.0",
]
build = [
    "pyinstaller>=6.0.0",
    "cx-freeze>=6.15.0",
]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-awesome-pages-plugin>=2.8.0",
]

[project.scripts]
gi = "gi.__main__:main"

[project.urls]
Homepage = "https://github.com/joshuagrant/gi"
Repository = "https://github.com/joshuagrant/gi"
Issues = "https://github.com/joshuagrant/gi/issues"

[tool.hatch.build.targets.wheel]
packages = ["gi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = [
    "S101", "S104", "S108", "S110", "S112", "S311", "S603", "S607",  # Security
    "C901",  # Complex functions (CLI functions are complex by design)
    "FBT001", "FBT003",  # Boolean arguments (Typer CLI definitions)
    "BLE001",  # Blind exceptions (CLI error handling needs broad catching)
    "PERF203", "PERF401",  # Performance issues (minor optimizations)
    "PLR0912", "PLR0913", "PLR0915",  # Code complexity (main CLI function)
    "B008",  # Function call in default argument (Typer)
    "PLW0603",  # Global statement (testing utility)
    "SLF001",  # Private member access (PyInstaller)
    "E501",  # Line too long (some comments are clearer when not wrapped)
    "COM812",  # Trailing comma (conflicts with formatter)
]
